make runnable on windows